fix: heading styles and table horizontal scrolling (ew) styles

--- a/src/css/home-styles.css
+++ b/src/css/home-styles.css
@@ -11,6 +11,9 @@
   height:calc(100vh - 200px);
   min-height:0;
 }
+#hero h1{
+  font-size:1.5rem;
+}
 /* hero, left col (illustration) */
 .a-mountain-logo{
   width:100%;
