--- a/src/css/site-styles.css
+++ b/src/css/site-styles.css
@@ -149,8 +149,7 @@ h1, h2, h3, h4, h5, h6, button, input[type='submit'], .button{
   letter-spacing:.35em;
 }
 h1{
-  /* font-size:24px; */
-  font-size:1.5rem;
+  font-size:2.4rem;
 }
 h1 .highlight-container{
   background-color:var(--accent);
